moved initial stuff to /playground

--- a/playground/index.html
+++ b/playground/index.html
@@ -10,8 +10,8 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/common.css"/>
-    <script type="text/javascript" language="JavaScript" src="/js/common.js"></script>
+    <link rel="stylesheet" href="/playground/css/common.css"/>
+    <script type="text/javascript" language="JavaScript" src="/playground/js/common.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="container">
